# binary-install

./: CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml
src/: lib.rs
tests/all/: cache.rs  download.rs  main.rs
