[package]
name = "rust-binary-install"
description = "Install a binary from a path to a global cache"
authors = ["Cloudflare"]
repository = "https://github.com/cloudflare/rust-binary-install"
license = "MIT/Apache-2.0"
version = "0.0.1"
readme = "./README.md"
edition = "2018"

[dependencies]
curl = "0.4"
dirs = "2.0"
anyhow = "1.0.33"
flate2 = "1.0"
fs2 = "0.4"
hex = "0.4"
is_executable = "0.1"
siphasher = "0.3"
tar = "0.4"
zip = "0.5"

[dev-dependencies]
tempfile = "3.1"
